# Skypro

./: hello.py  solve.py
Lesson_33_13_12_22/: Lesson_33_1.py  Lesson_33_2.py  Lesson_33_3.py  Lesson_33_4.py
Lesson_34_14_12_22/: Lesson_34_1.py  Lesson_34_2.py  Lesson_34_3.py
Lesson_35_15_12_22/: Lesson_35_1.py  Lesson_35_2.py  Lesson_35_3.py  Lesson_35_4.py
kurs_SP500/: pyproject.toml
kurs_SP500/kurs_sp500/: kurs_SP500.py
lssn_20_23_11_22/: pyproject.toml
lssn_20_23_11_22/lssn_20_23_11_22/: get_val.py  set_.py
lssn_20_23_11_22/tests/: test_get_val.py  test_set_.py
lssn_21_24_11_22/: .coverage  pyproject.toml
lssn_21_24_11_22/lssn_21_24_11_22/: get.py  index_of.py  slice.py
lssn_21_24_11_22/tests/: test_get.py  test_index_of.py  test_slice.py
lssn_24_30_11_22/: pyproject.toml
lssn_24_30_11_22/lssn_24_30_11_22/: lssn_24_1.py  lssn_24_2.py
lssn_27_05_12_22/: pyproject.toml
lssn_27_05_12_22/lssn_27_05_12_22/: lssn_27_1.py  lssn_27_2.py  lssn_27_3.py  lssn_27_4..py
