[tool.poetry]
name = "kurs-sp500"
version = "0.1.0"
description = ""
authors = ["Khalyavin Vasily <STS2004@gmail.com>"]
readme = "README.md"
packages = [{include = "kurs_sp500"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
