[tool.poetry]
name = "lssn-21-24-11-22"
version = "0.1.0"
description = ""
authors = ["Khalyavin Vasily <STS2004@gmail.com>"]
readme = "README.md"
packages = [{include = "lssn_21_24_11_22"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
