[tool.poetry]
name = "lssn-27-05-12-22"
version = "0.1.0"
description = ""
authors = ["Khalyavin Vasily <STS2004@gmail.com>"]
readme = "README.md"
packages = [{include = "lssn_27_05_12_22"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
